# P-PLP

./: .Renviron.example  .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml  text.txt
artifact_smoke_test_manual/: confusion_matrix.csv  feature_coefficients.csv  metrics.json  run_manifest.json
docs/: api.md  cohorts.md  db.md  index.md  installation.md  usage.md
notebooks/: p_plp_atrial_fibrillation.ipynb  p_plp_showcase.ipynb  p_plp_showcase_all_features.ipynb
r_scripts/: PLP_comparative_study.R  Stroke.R  load_enemea_omop.R  load_synthea_omop.R  plp_example_script.R
src/p_plp/: __init__.py  demo.ipynb  main.py  outpatient_demo.ipynb  pipeline.py
src/p_plp/cohorts/: __init__.py  cohort_demo.ipynb  labels.py  load_cohorts.py  outcome.py  sql.py  target.py  time_at_risk.py  utils.py
src/p_plp/config/: __init__.py  pipeline.py
src/p_plp/db/: __init__.py  config.py  db_demo.ipynb  engine.py  session.py  sql_utils.py  table_io.py  utils.py  validate.py
src/p_plp/feature_engineering/: __init__.py  conditions.py  demographics.py  drugs.py  features.py  model_dataset.py  scores.py  visits.py
src/p_plp/modeling/: __init__.py  artifacts.py  dataset.py  evaluate.py  preprocessing.py  train.py  utils.py
tests/: basic_test.py  test_cohort_sql.py  test_dataset_split.py  test_db_config.py  test_db_connection.py  test_db_schema.py  test_db_sql.py  test_db_tables.py  test_db_validate.py  test_model_artifacts.py  test_model_cross_validation.py  test_model_grid_search.py  test_read_db.py
